[package]
name = "scooter-hx-engine"
version = "0.1.4"
edition = "2024"
rust-version = "1.89"

[lib]
name = "scooter_hx"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
etcetera = "0.11.0"
ignore = "0.4.25"
log = "0.4.30"
scooter-core = { version = "0.3.3", features = ["steel"] }
simple-log = "2.4.0"
steel-core = { version = "0.8.0", features = ["dylibs", "sync"] }
steel-derive = { version = "0.8.2" }
unicode-width = "0.2.2"
anyhow = "1.0.103"
tokio = { version = "1.52", features = ["full"] }

[dev-dependencies]
tempfile = "3.27"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
manual_string_new = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant_else = "allow"
if_not_else = "allow"
needless_raw_string_hashes = "allow"
bool_assert_comparison = "allow"
similar_names = "allow"

[lints.rust]
rust_2018_idioms = "warn"
